--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
 }
 
 #character-details {
-  text-align: center;
+  text-align: left;
   margin: 20px auto;
   padding: 20px;
   max-width: 600px;
